Backend : Thêm thành viên nhóm, rời nhóm, xóa nhóm ( admin )